# snake_planner

./: .gitattributes  .gitignore  DQN.md  README.md  main.py  pyproject.toml  record_comparison.py  test_planners.py
docs/: DQN.md
game/: __init__.py  environment.py  game_state.py  snake.py
metrics/: __init__.py  tracker.py
models/: dqn_snake.pt  dqn_snake_5000iter.pt  dqn_snake_naive.pt  reinforce_snake.pt
planners/: astar.py  base_planner.py
snake_planner/: config.py
snake_planner/common/: geometry.py
snake_planner/game/: environment.py  game_state.py  snake.py
snake_planner/metrics/: tracker.py
snake_planner/planners/: __init__.py  base_planner.py  bfs.py  dijkstra.py  dqn_planner.py  mcts.py  mcts_true.py  reinforce_planner.py  rrt.py  search_planners.py  survival.py
snake_planner/rl/: dqn_agent.py  reinforce_agent.py  replay_buffer.py  snake_env_rl.py  train.py
snake_planner/visualization/: renderer.py
visualization/: __init__.py  renderer.py
