[project]
dependencies = ["pygame", "numpy", "torch", "pillow", "matplotlib"]
name = "snake_planner"
requires-python = ">= 3.11, <3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
snake_planner = { path = ".", editable = true }

[tool.pixi.tasks]
